--- a/biblist.bib
+++ b/biblist.bib
@@ -291,3 +291,16 @@ title = {Mercer’s Theorem, Feature Maps, and Smoothing},
 %isbn = {978-3-540-35294-5},
 %doi = {10.1007/11776420_14}
 }
+
+
+
+@article{romani-rossini-schenone,
+author = {Romani, Lucia and Rossini, Milvia and Schenone, Daniela},
+year = {2018},
+month = {08},
+%pages = {},
+title = {Edge detection methods based on RBF interpolation},
+volume = {349},
+journal = {Journal of Computational and Applied Mathematics},
+%doi = {10.1016/j.cam.2018.08.006}
+}
