--- a/numerical-considerations.tex
+++ b/numerical-considerations.tex
@@ -13,10 +13,10 @@ Figure~\ref[limitQfig] shows what happens when $\phi$ is one of the Wendland's f
 
 
 
-One way to improve numerical stability when computing~$\Bm Q\.$ on a given set~$(X, F)$ of sampled data consists in bringing~$F$ closer to the origin before actually performing the computations, by taking adavantage of Property~\ref[translprop] and replacing~$F$ with  $G = F-\mathop{\rm mean}(F)$, for instance. In fact, it can be observed either using the considerations made in the proofs of Property~\ref[flatlimit] and Property~\ref[translprop], or also from  numerical tests, that this shift allows to obtain the same level of approximation for~$\lim_{ε\to 0} \Bm Q\.$ by using a bigger value of~$ε$, that is less likely to produce a malconditioned interpolation matrix.
+One way to improve numerical stability when computing~$\Bm Q\.$ on a given set~$(X, F)$ of sampled data consists in bringing~$F$ closer to the origin before actually performing the computations, by taking adavantage of Property~\ref[translprop] and replacing~$F$ with  $G = F-\mathop{\rm mean}(F)$, for instance. In fact, it can be observed either using the formulae present in the proofs of Property~\ref[flatlimit] and Property~\ref[translprop], or also from  numerical tests, that this shift allows to obtain the same level of approximation for~$\lim_{ε\to 0} \Bm Q\.$ by using a bigger value of~$ε$, that is less likely to produce a malconditioned interpolation matrix.
 
 
-An interesting fact to notice is that the vector~$\Bm Q$ detects different kinds of function irregularities, depending on the used radial function~$\phi$.  Consider the four functions~$f_1$, $f_2$, $f_3$, $f_4$, defined on the interval~$[-1,1]\subset\R$ as
+Talking about the vector~$\Bm Q\.$, an interesting fact to notice is that it can detect different kinds of function irregularities depending on the used radial function~$\phi$.  Consider, as an example, the four functions~$f_1$, $f_2$, $f_3$, $f_4$, defined on the interval~$[-1,1]\subset\R$ as
 $$
 \eqlines{\baselineskip=1.5\baselineskip}
 \displaylines{
@@ -31,10 +31,10 @@ $$
 which satisfy the following properties: $f_1$ is discontinuous; $f_2$ is of class~$\Cal C^0$ but not~$\Cal C^1$; $f_3$ is of class~$\Cal C^2$ but not~$\Cal C^1$; and $f_4$ is~$\Cal C^\infty\!\!$.\,\,
 After having sampled each of these functions at a set~$X$ of $25$ uniformly spaced points in~$[-1,1]$ (other sets of points could have been used as well), the $\phi$-regularity vector~$\Bm Q$ was computed (for a small enough value of~$\varepsilon$) using three different radial functions~$\phi$, namely the Wendland's $\Cal C^0$, $\Cal C^2$ and~$\Cal C^4$ functions.   The sampled functions and the computed components of~$\Bm Q$ are shown in Figure~\ref[diffregular].
 
-We see that the Wendland's $\Cal C^0$ function detects the discontinuity of~$f_1$, it almost doesn't see the gradient discontinuity of~$f_2$ (the small signal detected at the point~$x=0$ vanishes as the number  of sampled points is increased), and it doesn't detect the discontinuity of the second derivative in the case of~$f_3$.  Instead, both the Wendland's $\Cal C^2$ and~$\Cal C^4$ functions can detect, with signals of different amplitude, the irregularities of $f_2$ and~$f_3$.  Finally, neither of the considered radial functions  detect any irregularity in the smooth function~$f_4$, except some small signals at the boundary of the domain, that however appear also with the other functions.
+We see that the Wendland's $\Cal C^0$ function is able to detect the discontinuity of~$f_1$, but it almost doesn't see the gradient discontinuity of~$f_2$ (the small signal detected at the point~$x=0$ vanishes as the number  of sampled points is increased), and it doesn't detect the discontinuity of the second derivative in the case of~$f_3$.  Instead, both the Wendland's $\Cal C^2$ and~$\Cal C^4$ functions can detect, with signals of different amplitude, the irregularities of $f_2$ and~$f_3$.  Finally, neither of the considered radial functions  detect any irregularity in the smooth function~$f_4$, except some small signals at the boundary of the domain, that however appear also with the other functions.
 
 
-Up to now we have always talked about the regularity vector~$\Bm Q\.$, but never we mentioned the regularity classifier~$\Cal R$ of Definition~\ref[classifierdef], that is built upon it.  We show now some properties satisfied by the $1$-norm of the vector~$\Bm Q$ that should justify the given definition for~$\Cal R$.  For this purpose, we consider on the interval~$[-1,1]\subset\R$ the following four functions,
+Up to now we have always talked about the regularity vector~$\Bm Q\.$, but never we mentioned the regularity classifier~$\Cal R$ of Definition~\ref[classifierdef], that is built upon it.  We show now some properties satisfied by the $1$-norm of the vector~$\Bm Q$ that should justify the given definition for~$\Cal R$.  For this purpose, as an example we consider on the interval~$[-1,1]\subset\R$ the following four functions,
 $$
 \eqalign{
 g_1(x) &= \cos(x),&&
@@ -52,15 +52,15 @@ g_3(x) &= \cases{x & if $x<0$\cr
 $$
 that have an increasing number of singularities: $g_1$ has no singularities, $g_2$ has one single point of discontinuity, $g_3$ has two points of discontinuity, and $g_4$ has three discontinuities.  Then we sample these functions on a set~$X$ of $30$ points uniformly distributed in the interval~$[0,1]$ and compute for each case (an approximation of\,) the limit vector~$\Bm Q$ associated to the Wendland's $C^2$ function (the other functions could have been used as well). The results are shown in Figure~\ref[giust].
 
-Finally we calculate also~$\norm{\Bm Q}_1$ and obtain respectively for $g_1$, $g_2$, $g_3$ and $g_4$ the approximate values $0.04$, $2.04$, $2.07$ and~$2.07$.  Of course the value of~$\norm{\Bm Q}_1$ for~$g_1$ is small because $g_1$ has no singularities, while the value for the other functions is higher because each of them as at least one singularity.   But the most noticeable fact is that the values obtained for~$g_2$, $g_3$ and~$g_4$ are approximately the same.  The spikes in the values of the vector $\Bm Q$ near the singular points are lower when the global number of singularities is higher, but the sum of all of them remains always approximately the same.  It can also be experimentally observed that, when the number of sampled points is increased,  the value~$\norm{\Bm Q}_1$ in the case of~$g_1$ decreases approaching~$0$, while in all the other cases it remains pretty stable around the value~$2.06$. Therefore it seems that $\norm{\Bm Q}_1$ is a good indicator for establishing whether or not a function has singularities.
+Finally we calculate also~$\norm{\Bm Q}_1$ and the results for $g_1$, $g_2$, $g_3$ and $g_4$  are respectively the approximate values $0.04$, $2.04$, $2.07$ and~$2.07$.  Of course the value of~$\norm{\Bm Q}_1$ for~$g_1$ is small because $g_1$ has no singularities, while the value for the other functions is higher because each of them as at least one singularity.   But the most noticeable fact is that the values obtained for~$g_2$, $g_3$ and~$g_4$ are approximately the same.  The spikes in the values of the vector $\Bm Q$ near the singular points are lower when the global number of singularities is higher, but the sum taken over all of them remains always approximately the same.  If we repeat the same experiment with different data sites, it can also be observed that when the number of sampled points is increased  the value~$\norm{\Bm Q}_1$ in the case of~$g_1$ decreases approaching~$0$, while in all the other cases it remains pretty stable around the value~$2.06$. All these considerations lead us to say that $\norm{\Bm Q}_1$ is a good indicator for establishing whether or not a function has singularities.  In this particular case, for instance, we could choose some tolerance~$\tau$ in the interval~$(0,\, 2.06)$ and use it to classify the regularity of the data, by comparing the value of~$\norm{\Bm Q}_1$ with~$\tau$.  The actual choice of~$\tau$ depends on the evidence we need to classify the data as ``regular'':  the smaller $\tau$, the bigger the required evidence.
 
 
- When analysing the regularity of a function, other vectors worth looking at, besides the vector~$\Bm Q = \Bm U/\norm{s}_\phi^2\.$, are the vector~$\Bm E$ defined in~\ref[vectorE] or the vector of coefficients~$\Bm\alpha$, solution to the interpolation system~\ref[system].  In fact they store very similar information:
+ When analysing the regularity of a function, other indicators  worth looking at, besides the vector~$\Bm Q = \Bm U/\norm{s}_\phi^2\.$, are the vector~$\Bm E$ defined in~\ref[vectorE] or the vector of coefficients~$\Bm\alpha$, solution to the interpolation system~\ref[system].  In fact they store very similar information:
 $$
-E_k \buildrel\ref[vectorE]\over= f_k-s^{(k)\!}(x_k)\qquad U_k \buildrel\ref[Ukdef]\over= {(f_k-s^{(k)\!}(x_k))^2\over P_{X^{(k)\!}}^2(x_k)}\qquad \alpha_k \buildrel\ref[akformula]\over= {f_k-s^{(k)\!}(x_k)\over P_{X^{(k)\!}}^2(x_k)}.
+E_k \buildrel\ref[vectorE]\over= f_k-s^{(k)\!}(x_k),\qquad U_k \buildrel\ref[Ukdef]\over= {(f_k-s^{(k)\!}(x_k))^2\over P_{X^{(k)\!}}^2(x_k)},\qquad \alpha_k \buildrel\ref[akformula]\over= {f_k-s^{(k)\!}(x_k)\over P_{X^{(k)\!}}^2(x_k)}.
 $$
-From the computational point of view, there is almost no difference in computing one or the other, as we showed in Section~\ref[buildingsec].
-However $\Bm E$ apparently seems to be less precise at locating the exact position of the singularities, because it doesn't directly take into account the relative position of the data sites through the value of the power function.  A recent successful attempt at using the interpolation coefficients~$\Bm\alpha$ in the context of edge detection is provided by Romani, Rossini and Schenone~\cite[romani-rossini-schenone].      
+Moreover, from the computational point of view there is almost no difference in computing one or the other, as shown in Section~\ref[buildingsec].
+However, $\Bm E$ apparently seems to be less precise at locating the exact positions of the singularities, because it doesn't directly take into account the relative distribution of the data sites through the value of the power function.  A recent successful attempt at using the interpolation coefficients~$\Bm\alpha$ in the context of edge detection is provided by Romani, Rossini and Schenone~\cite[romani-rossini-schenone].      
 
 
 
