--- a/thesis.tex
+++ b/thesis.tex
@@ -56,7 +56,7 @@
 \nonum\chap Introduction
 \let\_mtext\omtext
 \let\uppercase\_uppercase
-
+\input introduction
 
 %\comment
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
