--- a/biblist.bib
+++ b/biblist.bib
@@ -304,3 +304,39 @@ volume = {349},
 journal = {Journal of Computational and Applied Mathematics},
 %doi = {10.1016/j.cam.2018.08.006}
 }
+
+
+
+
+@article {Erb_2020,
+    AUTHOR = {De Marchi, S. and Erb, W. and Marchetti, F. and Perracchione,
+              E. and Rossini, M.},
+     TITLE = {Shape-driven interpolation with discontinuous kernels: error
+              analysis, edge extraction, and applications in magnetic
+              particle imaging},
+   JOURNAL = {SIAM J. Sci. Comput.},
+  FJOURNAL = {SIAM Journal on Scientific Computing},
+    VOLUME = {42},
+      YEAR = {2020},
+    NUMBER = {2},
+     PAGES = {B472--B491},
+      ISSN = {1064-8275},
+   MRCLASS = {41A05 (41A25 41A30 65D05)},
+  MRNUMBER = {4080390},
+MRREVIEWER = {Alessandra De Rossi},
+}
+	
+@article {Bracco_2019,
+    AUTHOR = {Bracco, Cesare and Davydov, Oleg and Giannelli, Carlotta and
+              Sestini, Alessandra},
+     TITLE = {Fault and gradient fault detection and reconstruction from
+              scattered data},
+   JOURNAL = {Comput. Aided Geom. Design},
+  FJOURNAL = {Computer Aided Geometric Design},
+    VOLUME = {75},
+      YEAR = {2019},
+     PAGES = {101786, 20},
+      ISSN = {0167-8396},
+   MRCLASS = {65Y99},
+  MRNUMBER = {4021960},
+}
