--- a/introduction.tex
+++ b/introduction.tex
@@ -15,7 +15,7 @@ In the case of function discontinuities (jumps), these
 curves are known as faults or edges, while when dealing with gradient discontinuities (sometimes called creases) they are called gradient faults. 
 
 
-When performing interpolation, the choice of the kernel determines the regularity
+When performing interpolation, the choice of  kernel determines the regularity
 of the reconstructed function, since the reconstructed function is simply obtained
 as a sum of kernel translates centred at the data sites. Then 
 if the given sample comes
@@ -36,13 +36,13 @@ For this reason we propose a technique that consists of two phases:
 \vskip\parskip
 
 
-We approach the first phase, namely the domain segmentation, by building a binary classifier which is capable of predicting whether a given set of sampled data comes from a regular function or not, and then using it to perform an adaptive local analysis of the domain.  The regularity is inspected by some chosen kernel function, and the prediction is made based on the evidence that the given data has a regular behaviour.  The required evidence for the classification is a free parameter that can be set by the user;  but, once set, the classifier can be used on any given set of sampled data regardless, for instance, the specific magnitude of the sampled function values.
+We approach the first phase, namely the domain segmentation, by building a binary classifier which is capable of predicting whether a given set of sampled data comes from a regular function or not, and then using it to perform an adaptive local analysis of the domain.  The regularity is inspected by some chosen kernel function, and the prediction is made based on the evidence that the given data has a regular behaviour.  The required evidence for the classification is a free parameter~$\tau$ that can be set by the user;  but, once set, the classifier can be used on any given set of sampled data regardless, for instance, the specific magnitude of the sampled function values.
 
 
 % on the line of
-We built the classifier on a newly defined vector~$\Bm U$ which resembles the well known cross validation vector~$\Bm E$ (see e.g.~\cite[rippa_1999]), that is usually used to determine the optimal shape parameter for the radial basis functions of the interpolating space.  The cross-validation vector contains information about the difference at each data site between the sampled function value  and the value predicted for that data site by the interpolant of all the other data sites alone. Our defined vector~$\Bm U$ instead contains information about the change of the native space norm of the interpolant when each point is individually removed.  We show that this vector~$\Bm U$ can be computed as efficiently as~$\Bm E$.
+We build the classifier on a newly defined vector~$\Bm U$ which resembles the well known cross-validation vector~$\Bm E$ (see e.g.~\cite[rippa_1999]), that is usually used to determine the optimal shape parameter for the radial basis functions of the interpolating space.  The cross-validation vector contains information about the difference at each data site between the sampled function value  and the value predicted for that data site by the interpolant of all the other data sites alone. Our defined vector~$\Bm U$ instead contains information about the change of the native space norm of the interpolant when each point is individually removed.  We show that this vector~$\Bm U$ can be computed as efficiently as~$\Bm E$.
 
-Each component of the vector~$\Bm U$ is then divided by the native space norm of the interpolant of all the data sites to obtain its ``normalised'' version~$\Bm Q$.  This vector~$\Bm Q$ is finally used to build the regularity classifier.  The classification of the sampled data then happens by confronting the sum of the components of~$\Bm Q$ with a user given threshold~$\tau$.
+Each component of the vector~$\Bm U\.$ is then divided by the native space norm of the interpolant of all the data sites to obtain its ``normalised'' version~$\Bm Q$.  This vector~$\Bm Q$ is finally used to build the previously mentioned regularity classifier.  The classification of the sampled data in fact happens by confronting the sum of the components of~$\Bm Q\.$ with a user given threshold~$\tau$.
 
 
 
@@ -55,7 +55,7 @@ This model is trained with the  previously determined subsets~$X_j$ of data site
 The thesis is structured as follows:
 \begitems
 * Chapter 1---Kernel-based interpolation.  This first chapter serves to introduce the interpolation problem and to show how it can be solved by using kernel techniques. In particular we talk about positive definite functions, their associated native spaces, and error estimates.
-* Chapter 2---Data classification.  Here is where we build the vectors $\Bm U$ and~$\Bm Q$ and the regularity classifier.  We show that there is a way to efficiently compute~$\Bm U$, and then show some properties of invariance satisfied by~$\Bm Q$, and finally some examples.
+* Chapter 2---Data classification.  Here is where we build the vectors $\Bm U$ and~$\Bm Q$ and the regularity classifier.  We first show that there is a way to efficiently compute~$\Bm U$, and then show some properties of invariance satisfied by~$\Bm Q\.$, and finally some examples.
 * Chapter 3---Discontinuities detection and reconstruction. In this last chapter we describe both phases of our algorithm to recover a discontinuous function from scattered data, and show some examples.
 \enditems
 
