--- a/biblist.bib
+++ b/biblist.bib
@@ -296,8 +296,7 @@ title = {Mercer’s Theorem, Feature Maps, and Smoothing},
 
 @article{romani-rossini-schenone,
 author = {Romani, Lucia and Rossini, Milvia and Schenone, Daniela},
-year = {2018},
-month = {08},
+year = {2019},
 %pages = {},
 title = {Edge detection methods based on RBF interpolation},
 volume = {349},
@@ -339,4 +338,17 @@ MRREVIEWER = {Alessandra De Rossi},
       ISSN = {0167-8396},
    MRCLASS = {65Y99},
   MRNUMBER = {4021960},
+}
+
+
+
+@article{de_marchi-erb-marchetti-perracchione-rossini_2020,
+author = {De Marchi, Stefano and Erb, W. and Marchetti, Francesco and Perracchione, Emma and Rossini, Milvia},
+year = {2020},
+month = {01},
+pages = {B472-B491},
+title = {Shape-Driven Interpolation With Discontinuous Kernels: Error Analysis, Edge Extraction, and Applications in Magnetic Particle Imaging},
+volume = {42},
+journal = {SIAM Journal on Scientific Computing},
+%doi = {10.1137/19M1248777}
 }
