--- a/reconstruction-examples.tex
+++ b/reconstruction-examples.tex
@@ -1,9 +1,17 @@
 
 
+As test functions we consider the functions $h_1$, $h_2$, $h_3$ and~$h_4$ that were previously defined at page~\pgref[segmexamples].
+As before, we sample them at the set of $2^{10}$ halton points on the domain~$\Omega=[0,1]\times[0,1]$.  For this particular set of data sites we already obtained a domain segmentation, by running our domain segmentation algorithm---refer to Figure~\ref[segmh1], \ref[segmh2], \ref[segmh3] and~\ref[segmh4].  Therefore for each of the considered functions we have a collection of subsets~$X_j$ of~$X$, each of them  contained in its corresponding subset~$\Omega_j$ of~$\Omega$.
+
+
+In some of the test cases, it happens that not all the points have been included in one of the groups~$X_j$.  For instance in Figure~\ref[segmh4] there is one point, near where the discontinuity curves cross one another, that isn't included in any of the four subdomains.  This will not be a problem in the reconstruction phase---the reconstructed function will simply be slightly less accurate because that point won't contribute in in the construction of the interpolant~$s_j$ on its domain~$\Omega_j$.
+
+\vfill
+
 \pageinsert
 \kern.7cm
 \bgroup
-\picw=.7\hsize
+\picw=.75\hsize
 \line{\hss\inspic{f1_curves.pdf}\hss}
 \picw=.6\hsize
 \line{\hss\inspic{f1_ori.pdf}\kern-.8cm\inspic{f1_rec.pdf}\hss}
@@ -18,7 +26,7 @@
 \pageinsert
 \kern.7cm
 \bgroup
-\picw=.7\hsize
+\picw=.75\hsize
 \line{\hss\inspic{f4_curves.pdf}\hss}
 \picw=.6\hsize
 \line{\hss\inspic{f4_ori.pdf}\kern-.8cm\inspic{f4_rec.pdf}\hss}
@@ -32,7 +40,7 @@
 \pageinsert
 \kern.7cm
 \bgroup
-\picw=.7\hsize
+\picw=.75\hsize
 \line{\hss\inspic{f9_curves.pdf}\hss}
 \picw=.6\hsize
 \line{\hss\inspic{f9_ori.pdf}\kern-.8cm\inspic{f9_rec.pdf}\hss}
@@ -47,7 +55,7 @@
 \pageinsert
 \kern.7cm
 \bgroup
-\picw=.7\hsize
+\picw=.75\hsize
 \line{\hss\inspic{f10_curves.pdf}\hss}
 \picw=.6\hsize
 \line{\hss\inspic{f10_ori.pdf}\kern-.8cm\inspic{f10_rec.pdf}\hss}
@@ -56,6 +64,23 @@
 \caption/f
 \bigskip
 \endinsert
+
+
+
+\pageinsert
+\kern.7cm
+\bgroup
+\picw=.75\hsize
+\line{\hss\inspic{f6_curves.pdf}\hss}
+\picw=.6\hsize
+\line{\hss\inspic{f6_ori.pdf}\kern-.8cm\inspic{f6_rec.pdf}\hss}
+\egroup
+\cskip
+\caption/f
+\bigskip
+\endinsert
+
+
 
 
 
