--- a/thesis.tex
+++ b/thesis.tex
@@ -103,10 +103,12 @@
 \sec Domain segmentation
 %Boundary detection ???
 \input domain-segmentation
+       \nonum\secc[segmexamples] Examples
        \input domain-segmentation-examples
 
 \sec Reconstruction
 \input reconstruction
+       \nonum\secc Examples
        \input reconstruction-examples
 
 
