--- a/domain-segmentation-examples.tex
+++ b/domain-segmentation-examples.tex
@@ -20,7 +20,7 @@ $$
 These functions are all discontinuous along some curves, and regular otherwise.  The domain~$\Omega$ is thus partitioned into subdomains~$\Omega_j$ by the discontinuity curves.
 
 
-We sample these functions at a set of $2^{10}$ Halton points (see Fasshauer~\cite[fasshauer_2007], Appendix~A), and then run the domain segmentation algorithm by using the following parameters:
+We sample these functions at the set of $2^{10}$ Halton points (see Fasshauer~\cite[fasshauer_2007], Appendix~A), and then run the domain segmentation algorithm by using the following parameters:
 \begitems
 * Radial basis function: $\phi(r) = (1-r)_+^2$, namely the Wendland's~$\Cal C^0$ function;
 * Number of considered local points around each circumcentre: $n = 8^2$;
@@ -30,7 +30,7 @@ We sample these functions at a set of $2^{10}$ Halton points (see Fasshauer~\cit
 The results for $h_1$, $h_2$, $h_3$ and~$h_4$ are visualised respectively in Figure~\ref[segmh1], \ref[segmh2], \ref[segmh3] and~\ref[segmh4].
 
 
-Those pictures show the Delaunay triangulation of the considered set of Halton data sites, by colouring each triangle either red or green.  The connected regions of green triangles represent the sets~$\Cal I_j$ that have been determined by the algorithm; while the red triangles are either the triangles of the sets~$D_j$, or the triangles from where the algorithm couldn't start and that have not been included in any of the sets~$\Cal I_j$.
+Those pictures show the Delaunay triangulation of the considered set of Halton data sites, by colouring each triangle either red or green.  The connected regions of green triangles represent the sets~$\Cal I_j$ that have been determined by the algorithm; while the red triangles are either the triangles of the sets~$D_j$, or the triangles from where the algorithm couldn't start and that have not been later included in any of the sets~$\Cal I_j$.
 
 
 Moreover, in the pictures are also visualised the discontinuity curves of the functions. In each of the picture, the obtained set of red triangles is correct and almost minimal, in the sense that all the triangles that intersect the curves are red, and there are possibly only few other red triangles that should have indeed been coloured green. We remark that we got these results without changing any parameter from one function to another, in particular the tolerance~$\tau$.
@@ -40,7 +40,7 @@ We then consider another test function, which is defined on the same domain~$\Om
 $$
 h_5(x, y) = \biggl|{1\over2} - xy\biggr|.
 $$
-This function is continuous but possess a discontinuity in the gradient, along the curve implicitly described by the equation~$xy =\slfrac12$.  If we ran the domain segmentation algorithm with the previous parameters, then we get a picture where all the triangles are green.  Indeed all the data sites belong to the same regular domain according to the Wendland's~$\Cal C^0$ function.  But if ran again the algorithm by changing $\phi$ into the Wendland's~$\Cal C^2$ function
+This function is continuous but possess a discontinuity in the gradient, along the curve implicitly described by the equation~$xy =\slfrac12$.  If we run the domain segmentation algorithm with the previous parameters, then we get a picture where all the triangles are green.  Indeed all the data sites belong to the same regular domain according to the Wendland's~$\Cal C^0$ function.  But if run again the algorithm by changing $\phi$ into the Wendland's~$\Cal C^2$ function
 $$
 \phi(r) = (1-r)_+^4(4r+1)
 $$
@@ -49,7 +49,7 @@ then the discontinuity of the gradient is detected.  The result is shown in Figu
 
 
 
-Without changing any parameter, the algorithm works also for a different number~$N$ of data sites.  Generally, when more sampled data is available the detection even improves, because there is more evidence of the discontinuities.  In Figure~\ref[segm-11] we show the output of the algorithm  for the test functions $h_2$ and~$h_4$ sampled at~$2^{11}$ Halton points, when the Wendland's~$\Cal C^0$ function is used.  On the other side, when the available data points are too few, there may not be enough evidence of the discontinuities and the algorithms may reasonably fail to correctly identify the subdomains. 
+Without changing any parameter, the algorithm works also for a different number~$N$ of data sites.  Generally, when more sampled data is available the detection even improves, because there is more evidence of the discontinuities.  In Figure~\ref[segm-11] we show the output of the algorithm  for the test functions $h_2$ and~$h_4$ sampled at~$2^{11}$ Halton points, when the Wendland's~$\Cal C^0$ function is used.  On the other side, when the available data points are too few (typically, when they are less than~$2^9$), there may not be enough evidence of the discontinuities and the algorithms may reasonably fail to correctly identify the subdomains. 
 
 
 \vfill
